--- a/style.css
+++ b/style.css
@@ -118,22 +118,25 @@ body{
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #f20044;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 0 10px #f20044, 0 0 20px #f20044;
+    background-color: d1003c;
+    color: #0b1522;
     padding: 12px 24px;
     border: none;
     border-radius: 8px;
     font-size: 1em;
     font-family: 'Arial', sans-serif;
     text-decoration: none;
+    box-shadow: 0 4px 15px rgba(255, 255, 255, 0.2);
     transition: background-color 0.3s, color 0.3s;
+    z-index: 1000; 
+    opacity: 0; 
+    transform: translateY(50px);
 }
 
 .explanation-btn:hover {
     background-color: #f20044;
     color: white;
+    transform: scale(1.05);
 }
 
 .explanation-text {
@@ -151,3 +154,13 @@ body{
     font-family: 'Arial', sans-serif;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
 }
+
+.slide-in {
+    animation: slideInAnimation 1s ease forwards;
+}
+
+@keyframes slideInAnimation {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
